# xunit_parser

./: Cargo.toml
files/: output.xml
src/: lib.rs
