[package]
name = "xunit-parser"
version = "0.1.0"
authors = ["Erick Coble <ecoble19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde-xml-rs = "0.4"
chrono = { version = "0.4", features = ["serde"]}
